<resources>

    <string name="app_name">X &amp; O</string>
    <string name="x">X</string>
    <string name="and">&amp;</string>
    <string name="o">O</string>

    <!-- toasts -->
    <string name="press_back">Press back again to exit</string>
    <string name="verified">Verified</string>
    <string name="game_room_id_copied">Game Room Id Copied</string>
    <string name="opponent_player_left">Opponent has left the game</string>

    <!-- game modes -->
    <string name="playWithAI">Play with AI</string>
    <string name="twoPlayer">Two Player</string>
    <string name="playOnline">Play Online</string>

    <!-- about page -->
    <string name="developed_by">Developed By :</string>
    <string name="developer">Kashew Developers</string>
    <string name="open_source_label">this is an open source application,\nyou can find its source code at:</string>
    <string name="github_link"><u><i>XO - GitHub</i></u></string>
    <string name="github_url">http://www.github.com/kashew-developers/XO</string>

    <!-- labels -->
    <string name="authenticate">Verify your phone number to play with friends</string>
    <string name="score">Score</string>
    <string name="you">You</string>
    <string name="ai">AI</string>
    <string name="player_x">Player X</string>
    <string name="player_o">Player O</string>
    <string name="colan">:</string>
    <string name="block">block</string>

    <!-- dialogs -->
    <string name="sending_otp">Sending OTP</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="please_wait">Please wait&#8230;</string>

    <!-- buttons -->
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="joinGame">Join Game</string>
    <string name="shareID">Share ID</string>
    <string name="copyID">Copy ID</string>
    <string name="createGame">Create Game</string>
    <string name="verify">Verify</string>
    <string name="get_otp">Get OTP</string>
    <string name="reset">Reset</string>
    <string name="new_game">New Game</string>

    <!-- inputs -->
    <string name="name">Name</string>
    <string name="gameRoomId">Game Room ID</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="otp">OTP</string>

    <!-- headings -->
    <string name="heading">X/O player\'s chance</string>
    <string name="x_chance">X Player\'s chance</string>
    <string name="o_chance">O Player\'s chance</string>
    <string name="ai_chance">AI\'s Chance</string>
    <string name="your_chance">Your Chance</string>
    <string name="draw_game">Draw Game</string>
    <string name="you_won">You won the game</string>
    <string name="someone_won">%1$s won the game</string>
    <string name="player_x_won">Player \"X\" won the game</string>
    <string name="ai_won">AI won the game</string>
    <string name="player_o_won">Player \"O\" won the game</string>

</resources>
