<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".AuthenticateUser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/authenticate"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- phone number section -->
    <LinearLayout
        android:id="@+id/phoneNumberSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_style"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/otpSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phoneNumber"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="10" />

    </LinearLayout>

    <!-- otpSection -->
    <LinearLayout
        android:id="@+id/otpSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/otpCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/otp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <!-- otpButton -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/otpButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="getOtpClicked"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/get_otp"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:icon="@drawable/message_icon"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#ffffff"
        app:strokeWidth="2dp" />

    <!-- verifyButton -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="verifyOtpClicked"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/verify"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:icon="@drawable/verify_icon"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#ffffff"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>